# financial_document_classification

./: .gitignore  404.html  LICENSE  Makefile  README.md  hello.py  index.html  pyproject.toml  sitemap.xml
about/: index.html
authors/: index.html
config/: config.yml  logging.yml
docs/: mkdocs.yml
docs/docs/: about.md  authors.md  index.md  license.md
docs/docs/getting_started/: prerequisites.md  setup.md
docs/docs/usage/: api.md  dataset.md  training.md
getting_started/prerequisites/: index.html
getting_started/setup/: index.html
license/: index.html
scripts/: download_data.sh  server.py  train.py
search/: search_index.json
src/config/: config.yml  logging.yml
src/ml/models/: efficientnet.py  resnet.py  visiontransformer.py
src/ml/preprocessing/: dataloader.py  dataset.py
src/ml/utils/: mlflow_utils.py  train_utils.py
src/utils/: config.py
test/unit/: test_dataloader.py  test_dataset.py
usage/api/: index.html
usage/dataset/: index.html
usage/training/: index.html
